refactor: add back isOffline and remove trashReason from asset, change sync job flow
