# open-api/immich-openapi-specs.json
@@ -7832,13 +7832,6 @@
               "type": "string"
             },
             "type": "array"
-          },
-          "trashReason": {
-            "enum": [
-              "deleted",
-              "offline"
-            ],
-            "type": "string"
           }
         },
         "required": [
@@ -8376,6 +8369,9 @@
           "isFavorite": {
             "type": "boolean"
           },
+          "isOffline": {
+            "type": "boolean"
+          },
           "isTrashed": {
             "type": "boolean"
           },
@@ -8440,10 +8436,6 @@
             "nullable": true,
             "type": "string"
           },
-          "trashReason": {
-            "nullable": true,
-            "type": "string"
-          },
           "type": {
             "$ref": "#/components/schemas/AssetTypeEnum"
           },
@@ -8469,6 +8461,7 @@
           "id",
           "isArchived",
           "isFavorite",
+          "isOffline",
           "isTrashed",
           "localDateTime",
           "originalFileName",
