# server/src/dtos/asset-response.dto.ts
@@ -43,7 +43,7 @@ export class AssetResponseDto extends SanitizedAssetResponseDto {
   isFavorite!: boolean;
   isArchived!: boolean;
   isTrashed!: boolean;
-  trashReason?: string | null;
+  isOffline!: boolean;
   exifInfo?: ExifResponseDto;
   smartInfo?: SmartInfoResponseDto;
   tags?: TagResponseDto[];
@@ -139,7 +139,7 @@ export function mapAsset(entity: AssetEntity, options: AssetMapOptions = {}): As
     isFavorite: options.auth?.user.id === entity.ownerId ? entity.isFavorite : false,
     isArchived: entity.isArchived,
     isTrashed: !!entity.deletedAt,
-    trashReason: entity.trashReason,
+    isOffline: entity.isOffline,
     duration: entity.duration ?? '0:00:00.00000',
     exifInfo: entity.exifInfo ? mapExif(entity.exifInfo) : undefined,
     smartInfo: entity.smartInfo ? mapSmartInfo(entity.smartInfo) : undefined,
