# server/src/entities/asset.entity.ts
@@ -1,4 +1,3 @@
-import { AssetTrashReason } from 'src/dtos/asset.dto';
 import { AlbumEntity } from 'src/entities/album.entity';
 import { AssetFaceEntity } from 'src/entities/asset-face.entity';
 import { AssetFileEntity } from 'src/entities/asset-files.entity';
@@ -171,12 +170,8 @@ export class AssetEntity {
   @OneToOne(() => AssetJobStatusEntity, (jobStatus) => jobStatus.asset, { nullable: true })
   jobStatus?: AssetJobStatusEntity;
 
-  @Column({
-    type: 'enum',
-    enum: AssetTrashReason,
-    nullable: true,
-  })
-  trashReason!: AssetTrashReason | null;
+  @Column({ type: 'boolean', default: false })
+  isOffline!: boolean;
 
   @Index('IDX_assets_duplicateId')
   @Column({ type: 'uuid', nullable: true })
