# server/src/services/library.service.ts
@@ -5,16 +5,15 @@ import picomatch from 'picomatch';
 import { StorageCore } from 'src/cores/storage.core';
 import { SystemConfigCore } from 'src/cores/system-config.core';
 import { OnEmit } from 'src/decorators';
-import { AssetTrashReason } from 'src/dtos/asset.dto';
 import {
   CreateLibraryDto,
   LibraryResponseDto,
   LibraryStatsResponseDto,
+  mapLibrary,
   UpdateLibraryDto,
   ValidateLibraryDto,
   ValidateLibraryImportPathResponseDto,
   ValidateLibraryResponseDto,
-  mapLibrary,
 } from 'src/dtos/library.dto';
 import { AssetEntity } from 'src/entities/asset.entity';
 import { AssetType } from 'src/enum';
@@ -27,8 +26,8 @@ import {
   IJobRepository,
   ILibraryFileJob,
   ILibraryOfflineJob,
-  JOBS_LIBRARY_PAGINATION_SIZE,
   JobName,
+  JOBS_LIBRARY_PAGINATION_SIZE,
   JobStatus,
 } from 'src/interfaces/job.interface';
 import { ILibraryRepository } from 'src/interfaces/library.interface';
@@ -76,7 +75,7 @@ export class LibraryService {
     this.jobRepository.addCronJob(
       'libraryScan',
       scan.cronExpression,
-      () => handlePromiseError(this.jobRepository.queue({ name: JobName.LIBRARY_QUEUE_SCAN_ALL }), this.logger),
+      () => handlePromiseError(this.jobRepository.queue({ name: JobName.LIBRARY_QUEUE_SYNC_ALL }), this.logger),
       scan.enabled,
     );
 
@@ -247,7 +246,7 @@ export class LibraryService {
   private async scanAssets(libraryId: string, assetPaths: string[], ownerId: string) {
     await this.jobRepository.queueAll(
       assetPaths.map((assetPath) => ({
-        name: JobName.LIBRARY_REFRESH_ASSET,
+        name: JobName.LIBRARY_SYNC_FILE,
         data: {
           id: libraryId,
           assetPath,
@@ -359,134 +358,94 @@ export class LibraryService {
     return JobStatus.SUCCESS;
   }
 
-  private async getMtime(path: string): Promise<Date> {
-    try {
-      const stat = await this.storageRepository.stat(path);
-      return stat.mtime;
-    } catch (error: Error | any) {
-      throw new BadRequestException(`Cannot access file ${path}`, { cause: error });
-    }
-  }
-
-  private async refreshExistingAsset(asset: AssetEntity) {
-    if (asset.trashReason == AssetTrashReason.DELETED) {
-      this.logger.debug(`Asset is previously trashed by user, won't refresh: ${asset.originalPath}`);
-      return JobStatus.SKIPPED;
-    } else if (asset.trashReason == AssetTrashReason.OFFLINE) {
-      this.logger.debug(`Asset is previously trashed as offline, restoring from trash: ${asset.originalPath}`);
-      await this.assetRepository.restoreAll([asset.id]);
-      return JobStatus.SUCCESS;
-    }
-
-    const mtime = await this.getMtime(asset.originalPath);
-    if (mtime.toISOString() === asset.fileModifiedAt.toISOString()) {
-      this.logger.debug(`Asset already exists in database and on disk, will not import: ${asset.originalPath}`);
-      return JobStatus.SKIPPED;
-    }
-    this.logger.debug(
-      `File modification time has changed, re-importing asset: ${asset.originalPath}. Old mtime: ${asset.fileModifiedAt}. New mtime: ${mtime}`,
-    );
-
-    await this.assetRepository.updateAll([asset.id], {
-      fileCreatedAt: mtime,
-      fileModifiedAt: mtime,
-      originalFileName: parse(asset.originalPath).base,
-      deletedAt: null,
-      trashReason: null,
-    });
-  }
-
-  async handleAssetRefresh(job: ILibraryFileJob): Promise<JobStatus> {
+  async handleSyncFile(job: ILibraryFileJob): Promise<JobStatus> {
+    // Only needs to handle new assets
     const assetPath = path.normalize(job.assetPath);
 
     let asset = await this.assetRepository.getByLibraryIdAndOriginalPath(job.id, assetPath);
-
     if (asset) {
-      const status = await this.refreshExistingAsset(asset);
-
-      if (status) {
-        return status;
-      }
-    } else {
-      // This asset is new to us, read it from disk
-      this.logger.log(`Importing new library asset: ${assetPath}`);
-
-      const library = await this.repository.get(job.id, true);
-      if (library?.deletedAt) {
-        this.logger.error('Cannot import asset into deleted library');
-        return JobStatus.FAILED;
-      }
-
-      // TODO: device asset id is deprecated, remove it
-      const deviceAssetId = `${basename(assetPath)}`.replaceAll(/\s+/g, '');
-
-      const pathHash = this.cryptoRepository.hashSha1(`path:${assetPath}`);
-
-      // TODO: doesn't xmp replace the file extension? Will need investigation
-      let sidecarPath: string | null = null;
-      if (await this.storageRepository.checkFileExists(`${assetPath}.xmp`, R_OK)) {
-        sidecarPath = `${assetPath}.xmp`;
-      }
-
-      let assetType: AssetType;
-
-      if (mimeTypes.isImage(assetPath)) {
-        assetType = AssetType.IMAGE;
-      } else if (mimeTypes.isVideo(assetPath)) {
-        assetType = AssetType.VIDEO;
-      } else {
-        throw new BadRequestException(`Unsupported file type ${assetPath}`);
-      }
-
-      const mtime = await this.getMtime(assetPath);
-
-      // TODO: In wait of refactoring the domain asset service, this function is just manually written like this
-      asset = await this.assetRepository.create({
-        ownerId: job.ownerId,
-        libraryId: job.id,
-        checksum: pathHash,
-        originalPath: assetPath,
-        deviceAssetId,
-        deviceId: 'Library Import',
-        fileCreatedAt: mtime,
-        fileModifiedAt: mtime,
-        localDateTime: mtime,
-        type: assetType,
-        originalFileName: parse(assetPath).base,
-        sidecarPath,
-        isExternal: true,
-      });
+      return JobStatus.SKIPPED;
     }
 
-    this.logger.debug(`Queueing metadata extraction for: ${assetPath}`);
+    let stat;
+    try {
+      stat = await this.storageRepository.stat(assetPath);
+    } catch (error: any) {
+      if (error.code === 'ENOENT') {
+        this.logger.error(`File not found: ${assetPath}`);
+        return JobStatus.SKIPPED;
+      }
+      this.logger.error(`Error reading file: ${assetPath}. Error: ${error}`);
+      return JobStatus.FAILED;
+    }
+
+    this.logger.log(`Importing new library asset: ${assetPath}`);
+
+    const library = await this.repository.get(job.id, true);
+    if (library?.deletedAt) {
+      this.logger.error('Cannot import asset into deleted library');
+      return JobStatus.FAILED;
+    }
+
+    // TODO: device asset id is deprecated, remove it
+    const deviceAssetId = `${basename(assetPath)}`.replaceAll(/\s+/g, '');
+
+    const pathHash = this.cryptoRepository.hashSha1(`path:${assetPath}`);
+
+    // TODO: doesn't xmp replace the file extension? Will need investigation
+    let sidecarPath: string | null = null;
+    if (await this.storageRepository.checkFileExists(`${assetPath}.xmp`, R_OK)) {
+      sidecarPath = `${assetPath}.xmp`;
+    }
+
+    const assetType = mimeTypes.isVideo(assetPath) ? AssetType.VIDEO : AssetType.IMAGE;
+
+    const mtime = stat.mtime;
+
+    asset = await this.assetRepository.create({
+      ownerId: job.ownerId,
+      libraryId: job.id,
+      checksum: pathHash,
+      originalPath: assetPath,
+      deviceAssetId,
+      deviceId: 'Library Import',
+      fileCreatedAt: mtime,
+      fileModifiedAt: mtime,
+      localDateTime: mtime,
+      type: assetType,
+      originalFileName: parse(assetPath).base,
+      sidecarPath,
+      isExternal: true,
+    });
+
+    await this.queuePostSyncJobs(asset);
+
+    return JobStatus.SUCCESS;
+  }
+
+  async queuePostSyncJobs(asset: AssetEntity) {
+    this.logger.debug(`Queueing metadata extraction for: ${asset.originalPath}`);
 
     await this.jobRepository.queue({ name: JobName.METADATA_EXTRACTION, data: { id: asset.id, source: 'upload' } });
 
     if (asset.type === AssetType.VIDEO) {
       await this.jobRepository.queue({ name: JobName.VIDEO_CONVERSION, data: { id: asset.id } });
     }
-
-    return JobStatus.SUCCESS;
   }
 
   async queueScan(id: string) {
     await this.findOrFail(id);
 
     await this.jobRepository.queue({
-      name: JobName.LIBRARY_QUEUE_SCAN,
+      name: JobName.LIBRARY_QUEUE_SYNC_FILES,
       data: {
         id,
       },
     });
-    await this.jobRepository.queue({ name: JobName.LIBRARY_QUEUE_OFFLINE_CHECK, data: { id } });
+    await this.jobRepository.queue({ name: JobName.LIBRARY_QUEUE_SYNC_ASSETS, data: { id } });
   }
 
-  async queueOfflineCheck(id: string) {
-    this.logger.verbose(`Queueing offline file removal from library ${id}`);
-    await this.jobRepository.queue({ name: JobName.LIBRARY_OFFLINE_CHECK, data: { id } });
-  }
-
-  async handleQueueAllScan(): Promise<JobStatus> {
+  async handleQueueSyncAll(): Promise<JobStatus> {
     this.logger.debug(`Refreshing all external libraries`);
 
     await this.jobRepository.queue({ name: JobName.LIBRARY_QUEUE_CLEANUP, data: {} });
@@ -494,7 +453,7 @@ export class LibraryService {
     const libraries = await this.repository.getAll(true);
     await this.jobRepository.queueAll(
       libraries.map((library) => ({
-        name: JobName.LIBRARY_QUEUE_SCAN,
+        name: JobName.LIBRARY_QUEUE_SYNC_FILES,
         data: {
           id: library.id,
         },
@@ -502,7 +461,7 @@ export class LibraryService {
     );
     await this.jobRepository.queueAll(
       libraries.map((library) => ({
-        name: JobName.LIBRARY_QUEUE_OFFLINE_CHECK,
+        name: JobName.LIBRARY_QUEUE_SYNC_ASSETS,
         data: {
           id: library.id,
         },
@@ -511,20 +470,17 @@ export class LibraryService {
     return JobStatus.SUCCESS;
   }
 
-  async handleAssetOfflineCheck(job: ILibraryOfflineJob): Promise<JobStatus> {
+  async handleSyncAsset(job: ILibraryOfflineJob): Promise<JobStatus> {
     const asset = await this.assetRepository.getById(job.id);
-
-    if (!asset || asset.trashReason) {
-      // Skip if asset is missing or already trashed
-      // We don't want to trash an asset that has already been trashed because it can otherwise re-appear on the timeline if an asset is re-imported
+    if (!asset) {
       return JobStatus.SKIPPED;
     }
 
     const markOffline = async (explanation: string) => {
-      this.logger.debug(`${explanation}, removing: ${asset.originalPath}`);
-
-      await this.assetRepository.updateAll([asset.id], { trashReason: AssetTrashReason.OFFLINE });
-      await this.assetRepository.softDeleteAll([asset.id]);
+      if (!asset.isOffline) {
+        this.logger.debug(`${explanation}, removing: ${asset.originalPath}`);
+        await this.assetRepository.updateAll([asset.id], { isOffline: true, deletedAt: new Date() });
+      }
     };
 
     const isInPath = job.importPaths.find((path) => asset.originalPath.startsWith(path));
@@ -539,20 +495,37 @@ export class LibraryService {
       return JobStatus.SUCCESS;
     }
 
-    const fileExists = await this.storageRepository.checkFileExists(asset.originalPath, R_OK);
-    if (!fileExists) {
-      await markOffline('Asset is no longer on disk');
+    let stat;
+    try {
+      stat = await this.storageRepository.stat(asset.originalPath);
+    } catch {
+      await markOffline('Asset is no longer on disk or is inaccessible because of permissions');
       return JobStatus.SUCCESS;
     }
 
-    this.logger.verbose(
-      `Asset is found on disk, not covered by an exclusion pattern, and is in an import path, doing nothing: ${asset.originalPath}`,
-    );
+    const mtime = stat.mtime;
+    const isAssetModified = mtime.toISOString() !== asset.fileModifiedAt.toISOString();
 
+    if (asset.isOffline || isAssetModified) {
+      this.logger.debug(`Asset was offline or modified, updating asset record ${asset.originalPath}`);
+      //TODO: When we have asset status, we need to leave deletedAt as is when status is trashed
+      await this.assetRepository.updateAll([asset.id], {
+        isOffline: false,
+        deletedAt: null,
+        fileCreatedAt: mtime,
+        fileModifiedAt: mtime,
+        originalFileName: parse(asset.originalPath).base,
+      });
+    }
+
+    if (isAssetModified) {
+      this.logger.debug(`Asset was modified, queuing metadata extraction for: ${asset.originalPath}`);
+      await this.queuePostSyncJobs(asset);
+    }
     return JobStatus.SUCCESS;
   }
 
-  async handleQueueAssetRefresh(job: IEntityJob): Promise<JobStatus> {
+  async handleQueueSyncFiles(job: IEntityJob): Promise<JobStatus> {
     const library = await this.repository.get(job.id);
     if (!library) {
       this.logger.debug(`Library ${job.id} not found, skipping refresh`);
@@ -603,7 +576,7 @@ export class LibraryService {
     return JobStatus.SUCCESS;
   }
 
-  async handleQueueAssetOfflineCheck(job: IEntityJob): Promise<JobStatus> {
+  async handleQueueSyncAssets(job: IEntityJob): Promise<JobStatus> {
     const library = await this.repository.get(job.id);
     if (!library) {
       return JobStatus.SKIPPED;
@@ -621,7 +594,7 @@ export class LibraryService {
       this.logger.debug(`Discovered ${assetCount} asset(s) in library ${library.id}...`);
       await this.jobRepository.queueAll(
         assets.map((asset) => ({
-          name: JobName.LIBRARY_OFFLINE_CHECK,
+          name: JobName.LIBRARY_SYNC_ASSET,
           data: { id: asset.id, importPaths: library.importPaths, exclusionPatterns: library.exclusionPatterns },
         })),
       );
